# app/routes/__init__.py
@@ -1,6 +1,7 @@
 from flask_restful import Api
 from app.controllers import (IndexView, EmployeeView, EmployeeDetailView,
-      TaskView, TaskDetailView, ConsultantView, ConsultantDetailView)
+      TaskView, TaskDetailView, ConsultantView, ConsultantDetailView,
+      SaleView, SaleDetailView)
 
 
 
@@ -17,3 +18,6 @@ api.add_resource(TaskDetailView, '/tasks/<int:task_id>')
 # consultants
 api.add_resource(ConsultantView, '/consultants', endpoint='consultants')
 api.add_resource(ConsultantDetailView, '/consultants/<int:consultant_id>')
+# sales
+api.add_resource(SaleView, '/sales', endpoint='sales')
+api.add_resource(SaleDetailView, '/sales/<int:sale_id>')
